增加开发文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# Generated Stuff
-.sass-cache
-.sass-cache/*
-css/*.map
+# 通过命令生成的最终静态文件无需入库
+_prelease/
+
 
 # bundling output 生产环境编译的代码无需上传
 build/*
@@ -9,12 +8,12 @@ build
 dist/*
 dist
 
-.idea/
 
 # Node Modules (use `npm install` to generate these)
 node_modules/*
 node_modules
 ../*
+
 
 # OS X Junk
 .DS_Store
@@ -24,12 +23,10 @@ node_modules
 # Not-Needed System Files
 *.swp
 *.bak
-.idea/
 .svn/
-newrelic_agent.log
-#临时文件
-cdn.json
 
-.idea/*
+
+#临时文件
+
 
 
