--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,5 +1,5 @@
 {
-  "css/all_finish.css": "css/all_finish.f32ba.css",
+  "css/all_finish.css": "css/all_finish.aa209.css",
   "css/error.css": "css/error.529f0.css",
   "css/font.css": "css/font.56e0b.css",
   "css/footer.css": "css/footer.7889e.css",
@@ -19,7 +19,7 @@
   "images/banner1.jpg": "images/banner1.e25b0.jpg",
   "images/banner2.jpg": "images/banner2.0c0b3.jpg",
   "images/banner3.jpg": "images/banner3.2c438.jpg",
-  "images/book_72_96.jpg": "images/book_72_96.d41d8.jpg",
+  "images/book_72_96.jpg": "images/book_72_96.a7a1d.jpg",
   "images/btn_close.png": "images/btn_close.2a4b7.png",
   "images/focus_img_01.png": "images/focus_img_01.f946d.png",
   "images/focus_img_02.png": "images/focus_img_02.22dc0.png",
@@ -73,26 +73,37 @@
   "images/index/rec2x.png": "images/index/rec2x.1f946.png",
   "images/index/survey.png": "images/index/survey.14d95.png",
   "images/index/survey_btn.png": "images/index/survey_btn.35431.png",
-  "js/all_finish_free/common.js": "js/all_finish_free/common.f7af2.js",
-  "js/component/ajaxSetting.js": "js/component/ajaxSetting.f3167.js",
-  "js/component/browserSupport.js": "js/component/browserSupport.9f6f9.js",
-  "js/component/carousel.js": "js/component/carousel.6d0f9.js",
-  "js/component/header.js": "js/component/header.9cf4c.js",
-  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.cb5dd.js",
-  "js/component/pinNav.js": "js/component/pinNav.dc210.js",
-  "js/component/report.js": "js/component/report.4a564.js",
-  "js/component/roundabout.js": "js/component/roundabout.646af.js",
-  "js/component/url.js": "js/component/url.f2b26.js",
-  "js/component/viewTab.js": "js/component/viewTab.20c9f.js",
-  "js/finish/index.js": "js/finish/index.f76e8.js",
-  "js/free/addBook.js": "js/free/addBook.aa665.js",
-  "js/free/limitedFree.js": "js/free/limitedFree.52b3c.js",
-  "js/index/index.js": "js/index/index.11b72.js",
-  "js/index/login.js": "js/index/login.9b4e1.js",
-  "js/rank/community.js": "js/rank/community.82a67.js",
-  "js/rank/hotnew.js": "js/rank/hotnew.888f6.js",
-  "js/rank/index.js": "js/rank/index.f28ec.js",
-  "js/search/index.js": "js/search/index.a8bb7.js",
+  "js/all_finish_free/common.js": "js/all_finish_free/common.760fe.js",
+  "js/finish/index.js": "js/finish/index.33b77.js",
+  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
+  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
+  "js/component/carousel.js": "js/component/carousel.f29bd.js",
+  "js/component/header.js": "js/component/header.b84e8.js",
+  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
+  "js/component/pinNav.js": "js/component/pinNav.bb5d5.js",
+  "js/component/report.js": "js/component/report.e5180.js",
+  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
+  "js/component/url.js": "js/component/url.fe415.js",
+  "js/component/viewTab.js": "js/component/viewTab.b75cb.js",
+  "js/free/addBook.js": "js/free/addBook.5ac01.js",
+  "js/free/limitedFree.js": "js/free/limitedFree.72636.js",
+  "js/index/index.js": "js/index/index.35f6f.js",
+  "js/index/login.js": "js/index/login.267fb.js",
+  "js/rank/community.js": "js/rank/community.4fae9.js",
+  "js/rank/hotnew.js": "js/rank/hotnew.846b1.js",
+  "js/rank/index.js": "js/rank/index.b714d.js",
+  "js/search/index.js": "js/search/index.11995.js",
+  "sprites/rank/icon-bookshelf-active.png": "sprites/rank/icon-bookshelf-active.756ad.png",
+  "sprites/rank/icon-bookshelf.png": "sprites/rank/icon-bookshelf.73510.png",
+  "sprites/rank/icon-child.png": "sprites/rank/icon-child.68aee.png",
+  "sprites/rank/icon-circle-dot-active.png": "sprites/rank/icon-circle-dot-active.dabf6.png",
+  "sprites/zfree/ds.png": "sprites/zfree/ds.7d446.png",
+  "sprites/zfree/ecy.png": "sprites/zfree/ecy.1378d.png",
+  "sprites/zfree/jsls.png": "sprites/zfree/jsls.5c995.png",
+  "sprites/zfree/khly.png": "sprites/zfree/khly.b5e5b.png",
+  "sprites/zfree/wxxx.png": "sprites/zfree/wxxx.b48e5.png",
+  "sprites/zfree/xhqh.png": "sprites/zfree/xhqh.feaf7.png",
+  "sprites/zfree/yxjj.png": "sprites/zfree/yxjj.832c4.png",
   "css/lbfUI/css/Autocomplete.css": "css/lbfUI/css/Autocomplete.905d9.css",
   "css/lbfUI/css/Button.css": "css/lbfUI/css/Button.4445b.css",
   "css/lbfUI/css/Checkbox.css": "css/lbfUI/css/Checkbox.70e57.css",
