--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,7 +1,7 @@
 {
   "css/all_finish.css": "css/all_finish.aa209.css",
   "css/error.css": "css/error.529f0.css",
-  "css/font.css": "css/font.56e0b.css",
+  "css/font.css": "css/font.5d98b.css",
   "css/footer.css": "css/footer.7889e.css",
   "css/free.css": "css/free.ca5cd.css",
   "css/global.css": "css/global.c6b5d.css",
@@ -49,6 +49,26 @@
   "css/font/iconfont.svg": "css/font/iconfont.46b45.svg",
   "css/font/iconfont.ttf": "css/font/iconfont.f5080.ttf",
   "css/font/iconfont.woff": "css/font/iconfont.54a6f.woff",
+  "js/all_finish_free/common.js": "js/all_finish_free/common.760fe.js",
+  "js/finish/index.js": "js/finish/index.33b77.js",
+  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
+  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
+  "js/component/carousel.js": "js/component/carousel.f29bd.js",
+  "js/component/header.js": "js/component/header.b84e8.js",
+  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
+  "js/component/pinNav.js": "js/component/pinNav.bb5d5.js",
+  "js/component/report.js": "js/component/report.e5180.js",
+  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
+  "js/component/url.js": "js/component/url.fe415.js",
+  "js/component/viewTab.js": "js/component/viewTab.b75cb.js",
+  "js/free/addBook.js": "js/free/addBook.5ac01.js",
+  "js/free/limitedFree.js": "js/free/limitedFree.72636.js",
+  "js/index/index.js": "js/index/index.35f6f.js",
+  "js/index/login.js": "js/index/login.267fb.js",
+  "js/rank/community.js": "js/rank/community.4fae9.js",
+  "js/rank/hotnew.js": "js/rank/hotnew.846b1.js",
+  "js/rank/index.js": "js/rank/index.b714d.js",
+  "js/search/index.js": "js/search/index.11995.js",
   "images/93x124/1.jpg": "images/93x124/1.1816c.jpg",
   "images/93x124/2.jpg": "images/93x124/2.37ffc.jpg",
   "images/93x124/3.jpg": "images/93x124/3.5ce0e.jpg",
@@ -73,26 +93,6 @@
   "images/index/rec2x.png": "images/index/rec2x.1f946.png",
   "images/index/survey.png": "images/index/survey.14d95.png",
   "images/index/survey_btn.png": "images/index/survey_btn.35431.png",
-  "js/all_finish_free/common.js": "js/all_finish_free/common.760fe.js",
-  "js/finish/index.js": "js/finish/index.33b77.js",
-  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
-  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
-  "js/component/carousel.js": "js/component/carousel.f29bd.js",
-  "js/component/header.js": "js/component/header.b84e8.js",
-  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
-  "js/component/pinNav.js": "js/component/pinNav.bb5d5.js",
-  "js/component/report.js": "js/component/report.e5180.js",
-  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
-  "js/component/url.js": "js/component/url.fe415.js",
-  "js/component/viewTab.js": "js/component/viewTab.b75cb.js",
-  "js/free/addBook.js": "js/free/addBook.5ac01.js",
-  "js/free/limitedFree.js": "js/free/limitedFree.72636.js",
-  "js/index/index.js": "js/index/index.35f6f.js",
-  "js/index/login.js": "js/index/login.267fb.js",
-  "js/rank/community.js": "js/rank/community.4fae9.js",
-  "js/rank/hotnew.js": "js/rank/hotnew.846b1.js",
-  "js/rank/index.js": "js/rank/index.b714d.js",
-  "js/search/index.js": "js/search/index.11995.js",
   "sprites/rank/icon-bookshelf-active.png": "sprites/rank/icon-bookshelf-active.756ad.png",
   "sprites/rank/icon-bookshelf.png": "sprites/rank/icon-bookshelf.73510.png",
   "sprites/rank/icon-child.png": "sprites/rank/icon-child.68aee.png",
@@ -126,13 +126,6 @@
   "css/lbfUI/fonts/iconfont.svg": "css/lbfUI/fonts/iconfont.66a01.svg",
   "css/lbfUI/fonts/iconfont.ttf": "css/lbfUI/fonts/iconfont.d1053.ttf",
   "css/lbfUI/fonts/iconfont.woff": "css/lbfUI/fonts/iconfont.745c0.woff",
-  "images/index/1x/ds.png": "images/index/1x/ds.5eb0a.png",
-  "images/index/1x/ecy.png": "images/index/1x/ecy.c7b95.png",
-  "images/index/1x/jsls.png": "images/index/1x/jsls.3ff2c.png",
-  "images/index/1x/khly.png": "images/index/1x/khly.fed88.png",
-  "images/index/1x/wxxx.png": "images/index/1x/wxxx.6dac5.png",
-  "images/index/1x/xhqh.png": "images/index/1x/xhqh.f5d99.png",
-  "images/index/1x/yxjj.png": "images/index/1x/yxjj.126af.png",
   "images/index/2x/ds.png": "images/index/2x/ds.7d446.png",
   "images/index/2x/ecy.png": "images/index/2x/ecy.1378d.png",
   "images/index/2x/jsls.png": "images/index/2x/jsls.5c995.png",
@@ -140,6 +133,13 @@
   "images/index/2x/wxxx.png": "images/index/2x/wxxx.b48e5.png",
   "images/index/2x/xhqh.png": "images/index/2x/xhqh.feaf7.png",
   "images/index/2x/yxjj.png": "images/index/2x/yxjj.832c4.png",
+  "images/index/1x/ds.png": "images/index/1x/ds.5eb0a.png",
+  "images/index/1x/ecy.png": "images/index/1x/ecy.c7b95.png",
+  "images/index/1x/jsls.png": "images/index/1x/jsls.3ff2c.png",
+  "images/index/1x/khly.png": "images/index/1x/khly.fed88.png",
+  "images/index/1x/wxxx.png": "images/index/1x/wxxx.6dac5.png",
+  "images/index/1x/xhqh.png": "images/index/1x/xhqh.f5d99.png",
+  "images/index/1x/yxjj.png": "images/index/1x/yxjj.126af.png",
   "images/rank/spirte/icon-bookshelf-active.png": "images/rank/spirte/icon-bookshelf-active.756ad.png",
   "images/rank/spirte/icon-bookshelf.png": "images/rank/spirte/icon-bookshelf.73510.png",
   "images/rank/spirte/icon-child.png": "images/rank/spirte/icon-child.68aee.png",
