--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=local  gulp dev",
     "go": "gulp clean && gulp build && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
-    "build": "gulp clean && gulp build",
-    "nocombo-publish": "gulp clean && gulp build && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
-    "publish": "gulp clean && gulp build && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo && gulp copy",
+    "clean": "gulp clean",
+    "build": "gulp clean && sleep 1 && gulp build",
+    "nocombo-publish": "gulp clean && sleep 1 && gulp build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
+    "publish": "gulp clean && sleep 1 && gulp build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo && gulp copy",
     "preview": "cross-env NODE_ENV=preview  gulp dev"
   },
   "devDependencies": {
@@ -27,12 +28,13 @@
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.6",
     "gulp-eslint": "^2.0.0",
+    "gulp-folders": "^1.1.0",
     "gulp-header": "^1.7.1",
     "gulp-image": "^1.3.1",
     "gulp-image-resize": "^0.7.1",
     "gulp-imagemin": "^2.1.0",
     "gulp-jsbeautifier": "^2.0.3",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
@@ -45,9 +47,11 @@
     "gulp-uglify": "^1.5.1",
     "gulp.spritesmith": "^6.0.0",
     "imagemin-pngquant": "^4.0.0",
-    "jshint-stylish": "^2.1.0",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "require-dir": "^0.3.0",
     "through2": "^2.0.1",
+    "vinyl-buffer": "^1.0.0",
     "yargs": "^4.7.0"
   },
   "dependencies": {
