--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 通过命令生成的最终静态文件无需入库
+﻿# 通过命令生成的最终静态文件无需入库
 _prelease/
 
 
@@ -12,6 +12,7 @@ dist
 _prelease/
 _previews/
 _tmp/
+.idea/
 #static/
 
 
