--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Qidian Project Local Server",
   "scripts": {
     "dev": "cross-env NODE_ENV=local  gulp dev",
-    "init":"npm run build && npm run dev",
+    "init": "npm run build && npm run dev",
     "go": "gulp clean && gulp build && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
     "clean": "gulp clean",
     "build": "gulp clean && sleep 1 && gulp build",
@@ -50,6 +50,7 @@
     "imagemin-pngquant": "^4.0.0",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
+    "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "through2": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
