--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,6 +1,6 @@
 {
   "css/all_finish.css": "css/all_finish.028ac.css",
-  "css/channel.css": "css/channel.71726.css",
+  "css/channel.css": "css/channel.8a069.css",
   "css/demo_sprite.scss": "css/demo_sprite.e8bdb.scss",
   "css/erciyuan.css": "css/erciyuan.d020b.css",
   "css/erciyuan_sprite.scss": "css/erciyuan_sprite.7fea7.scss",
@@ -10,11 +10,11 @@
   "css/free.css": "css/free.b9c67.css",
   "css/global.css": "css/global.c6b5d.css",
   "css/header.css": "css/header.c34f4.css",
-  "css/index.css": "css/index.e38cc.css",
+  "css/index.css": "css/index.cf276.css",
   "css/layout.css": "css/layout.12830.css",
   "css/list_module.css": "css/list_module.0de45.css",
   "css/mixin.css": "css/mixin.672c7.css",
-  "css/module.css": "css/module.0e15a.css",
+  "css/module.css": "css/module.669ec.css",
   "css/qd_popup.css": "css/qd_popup.bd04f.css",
   "css/rank.css": "css/rank.300ad.css",
   "css/reset.css": "css/reset.32ccb.css",
@@ -74,26 +74,6 @@
   "css/lbfUI/Tip.css": "css/lbfUI/Tip.7f27b.css",
   "css/lbfUI/icon.css": "css/lbfUI/icon.64e43.css",
   "css/lbfUI/zTreeStyle.css": "css/lbfUI/zTreeStyle.3fb26.css",
-  "js/all_finish_free/common.js": "js/all_finish_free/common.d2ed0.js",
-  "js/channel/index.js": "js/channel/index.49055.js",
-  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
-  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
-  "js/component/carousel.js": "js/component/carousel.f29bd.js",
-  "js/component/header.js": "js/component/header.b4b9a.js",
-  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
-  "js/component/pinNav.js": "js/component/pinNav.a7ecb.js",
-  "js/component/report.js": "js/component/report.638b5.js",
-  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
-  "js/component/url.js": "js/component/url.7a7b5.js",
-  "js/error/index.js": "js/error/index.bc24d.js",
-  "js/free/addBook.js": "js/free/addBook.03a8c.js",
-  "js/free/limitedFree.js": "js/free/limitedFree.2e966.js",
-  "js/index/index.js": "js/index/index.ba61c.js",
-  "js/index/login.js": "js/index/login.45395.js",
-  "js/search/index.js": "js/search/index.257a5.js",
-  "js/rank/community.js": "js/rank/community.36075.js",
-  "js/rank/hotnew.js": "js/rank/hotnew.b67d0.js",
-  "js/rank/index.js": "js/rank/index.005ed.js",
   "images/93x124/1.jpg": "images/93x124/1.1816c.jpg",
   "images/93x124/2.jpg": "images/93x124/2.37ffc.jpg",
   "images/93x124/3.jpg": "images/93x124/3.5ce0e.jpg",
@@ -162,6 +142,26 @@
   "images/rank/nodata.png": "images/rank/nodata.bc186.png",
   "images/rank/nodata_2x.png": "images/rank/nodata_2x.8bd3e.png",
   "images/rank/nodata_3x.png": "images/rank/nodata_3x.c86fc.png",
+  "js/all_finish_free/common.js": "js/all_finish_free/common.d2ed0.js",
+  "js/channel/index.js": "js/channel/index.bac3d.js",
+  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
+  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
+  "js/component/carousel.js": "js/component/carousel.f29bd.js",
+  "js/component/header.js": "js/component/header.b4b9a.js",
+  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
+  "js/component/pinNav.js": "js/component/pinNav.a7ecb.js",
+  "js/component/report.js": "js/component/report.638b5.js",
+  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
+  "js/component/url.js": "js/component/url.7a7b5.js",
+  "js/error/index.js": "js/error/index.bc24d.js",
+  "js/free/addBook.js": "js/free/addBook.03a8c.js",
+  "js/free/limitedFree.js": "js/free/limitedFree.2e966.js",
+  "js/index/index.js": "js/index/index.ba61c.js",
+  "js/index/login.js": "js/index/login.45395.js",
+  "js/rank/community.js": "js/rank/community.36075.js",
+  "js/rank/hotnew.js": "js/rank/hotnew.b67d0.js",
+  "js/rank/index.js": "js/rank/index.005ed.js",
+  "js/search/index.js": "js/search/index.257a5.js",
   "css/lbfUI/css/Autocomplete.css": "css/lbfUI/css/Autocomplete.af9f4.css",
   "css/lbfUI/css/Button.css": "css/lbfUI/css/Button.b2fbc.css",
   "css/lbfUI/css/Checkbox.css": "css/lbfUI/css/Checkbox.70e57.css",
@@ -187,8 +187,6 @@
   "css/lbfUI/fonts/iconfont.woff": "css/lbfUI/fonts/iconfont.745c0.woff",
   "images/demo/sprite/@1x.png": "images/demo/sprite/@1x.c3f83.png",
   "images/demo/sprite/@2x.png": "images/demo/sprite/@2x.d348a.png",
-  "images/erciyuan/sprite/@1x.png": "images/erciyuan/sprite/@1x.c6619.png",
-  "images/erciyuan/sprite/@2x.png": "images/erciyuan/sprite/@2x.33512.png",
   "images/index/1x/ds.png": "images/index/1x/ds.5eb0a.png",
   "images/index/1x/ecy.png": "images/index/1x/ecy.c7b95.png",
   "images/index/1x/jsls.png": "images/index/1x/jsls.3ff2c.png",
@@ -203,6 +201,8 @@
   "images/index/2x/wxxx.png": "images/index/2x/wxxx.b48e5.png",
   "images/index/2x/xhqh.png": "images/index/2x/xhqh.feaf7.png",
   "images/index/2x/yxjj.png": "images/index/2x/yxjj.832c4.png",
+  "images/erciyuan/sprite/@1x.png": "images/erciyuan/sprite/@1x.c6619.png",
+  "images/erciyuan/sprite/@2x.png": "images/erciyuan/sprite/@2x.33512.png",
   "css/lbfUI/images/Checkbox/checkbox-red.png": "css/lbfUI/images/Checkbox/checkbox-red.cabe6.png",
   "css/lbfUI/images/Checkbox/checkbox-red@2x.png": "css/lbfUI/images/Checkbox/checkbox-red@2x.10584.png",
   "css/lbfUI/images/Checkbox/checkbox.png": "css/lbfUI/images/Checkbox/checkbox.d8f91.png",
