--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=local  gulp dev",
     "init": "npm run build && npm run dev",
-    "sprite":"gulp auto-sprite && sleep 1 && gulp auto-sprite",
+    "sprite": "gulp auto-sprite && sleep 1 && gulp auto-sprite",
     "go": "gulp clean && gulp auto-sprite && gulp auto-sprite && gulp build  && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
     "clean": "gulp clean",
     "build": "gulp clean && sleep 1  && gulp auto-sprite && gulp auto-sprite && gulp build",
@@ -45,6 +45,7 @@
     "gulp-rev-custom-tag": "0.0.6",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.1.1",
+    "gulp-slash": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp.spritesmith": "^6.0.0",
