--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,24 +1,24 @@
 {
-  "css/all_finish.css": "css/all_finish.028ac.css",
-  "css/channel.css": "css/channel.8a069.css",
+  "css/all_finish.css": "css/all_finish.38bd8.css",
+  "css/channel.css": "css/channel.88e87.css",
   "css/demo_sprite.scss": "css/demo_sprite.e8bdb.scss",
-  "css/erciyuan.css": "css/erciyuan.d020b.css",
-  "css/erciyuan_sprite.scss": "css/erciyuan_sprite.7fea7.scss",
-  "css/error.css": "css/error.e7857.css",
-  "css/font.css": "css/font.c97ec.css",
-  "css/footer.css": "css/footer.ea9c0.css",
-  "css/free.css": "css/free.b9c67.css",
-  "css/global.css": "css/global.c6b5d.css",
-  "css/header.css": "css/header.c34f4.css",
-  "css/index.css": "css/index.cf276.css",
-  "css/layout.css": "css/layout.12830.css",
-  "css/list_module.css": "css/list_module.0de45.css",
-  "css/mixin.css": "css/mixin.672c7.css",
-  "css/module.css": "css/module.669ec.css",
-  "css/qd_popup.css": "css/qd_popup.bd04f.css",
-  "css/rank.css": "css/rank.300ad.css",
-  "css/reset.css": "css/reset.32ccb.css",
-  "css/search.css": "css/search.643dd.css",
+  "css/erciyuan.css": "css/erciyuan.5d552.css",
+  "css/erciyuan_sprite.scss": "css/erciyuan_sprite.23083.scss",
+  "css/error.css": "css/error.375a0.css",
+  "css/font.css": "css/font.fa8da.css",
+  "css/footer.css": "css/footer.22a79.css",
+  "css/free.css": "css/free.346c7.css",
+  "css/global.css": "css/global.e0526.css",
+  "css/header.css": "css/header.b20b8.css",
+  "css/index.css": "css/index.d4e2c.css",
+  "css/layout.css": "css/layout.0e33d.css",
+  "css/list_module.css": "css/list_module.4e8f0.css",
+  "css/mixin.css": "css/mixin.8beec.css",
+  "css/module.css": "css/module.b0f3e.css",
+  "css/qd_popup.css": "css/qd_popup.d19d3.css",
+  "css/rank.css": "css/rank.c974a.css",
+  "css/reset.css": "css/reset.e89f2.css",
+  "css/search.css": "css/search.7731c.css",
   "images/banner.swf": "images/banner.6fd7e.swf",
   "images/banner1.jpg": "images/banner1.e25b0.jpg",
   "images/banner2.jpg": "images/banner2.0c0b3.jpg",
@@ -51,10 +51,10 @@
   "css/font/FZZCYSK.svg": "css/font/FZZCYSK.88058.svg",
   "css/font/FZZCYSK.ttf": "css/font/FZZCYSK.4a145.ttf",
   "css/font/FZZCYSK.woff": "css/font/FZZCYSK.d2680.woff",
-  "css/font/iconfont.0.1.eot": "css/font/iconfont.0.1.97c36.eot",
-  "css/font/iconfont.0.1.svg": "css/font/iconfont.0.1.5d993.svg",
-  "css/font/iconfont.0.1.ttf": "css/font/iconfont.0.1.94a95.ttf",
-  "css/font/iconfont.0.1.woff": "css/font/iconfont.0.1.018bd.woff",
+  "css/font/iconfont.eot": "css/font/iconfont.f8e80.eot",
+  "css/font/iconfont.svg": "css/font/iconfont.40327.svg",
+  "css/font/iconfont.ttf": "css/font/iconfont.1640c.ttf",
+  "css/font/iconfont.woff": "css/font/iconfont.76ac3.woff",
   "css/lbfUI/Autocomplete.css": "css/lbfUI/Autocomplete.02755.css",
   "css/lbfUI/Button.css": "css/lbfUI/Button.8ccc1.css",
   "css/lbfUI/Checkbox.css": "css/lbfUI/Checkbox.15146.css",
@@ -74,28 +74,57 @@
   "css/lbfUI/Tip.css": "css/lbfUI/Tip.7f27b.css",
   "css/lbfUI/icon.css": "css/lbfUI/icon.64e43.css",
   "css/lbfUI/zTreeStyle.css": "css/lbfUI/zTreeStyle.3fb26.css",
+  "js/all_finish_free/common.js": "js/all_finish_free/common.d2ed0.js",
+  "js/channel/index.js": "js/channel/index.5d107.js",
+  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
+  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
+  "js/component/carousel.js": "js/component/carousel.f29bd.js",
+  "js/component/header.js": "js/component/header.b4b9a.js",
+  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
+  "js/component/pinNav.js": "js/component/pinNav.a7ecb.js",
+  "js/component/report.js": "js/component/report.638b5.js",
+  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
+  "js/component/url.js": "js/component/url.7a7b5.js",
+  "js/erciyuan/index.js": "js/erciyuan/index.a23fb.js",
+  "js/error/index.js": "js/error/index.bc24d.js",
+  "js/free/addBook.js": "js/free/addBook.03a8c.js",
+  "js/free/limitedFree.js": "js/free/limitedFree.2e966.js",
+  "js/index/index.js": "js/index/index.6a8d8.js",
+  "js/index/login.js": "js/index/login.45395.js",
+  "js/rank/community.js": "js/rank/community.36075.js",
+  "js/rank/hotnew.js": "js/rank/hotnew.b67d0.js",
+  "js/rank/index.js": "js/rank/index.005ed.js",
+  "js/search/index.js": "js/search/index.257a5.js",
   "images/93x124/1.jpg": "images/93x124/1.1816c.jpg",
   "images/93x124/2.jpg": "images/93x124/2.37ffc.jpg",
   "images/93x124/3.jpg": "images/93x124/3.5ce0e.jpg",
   "images/93x124/4.jpg": "images/93x124/4.5685b.jpg",
   "images/93x124/5.jpg": "images/93x124/5.633b9.jpg",
-  "images/channel/Group 32.png": "images/channel/Group 32.aa00e.png",
-  "images/channel/Group 32@2x.png": "images/channel/Group 32@2x.ac559.png",
-  "images/channel/book_shadow.png": "images/channel/book_shadow.aa00e.png",
-  "images/channel/book_shadow_2x.png": "images/channel/book_shadow_2x.ac559.png",
+  "images/channel/big_shadow.png": "images/channel/big_shadow.aa00e.png",
+  "images/channel/big_shadow_2x.png": "images/channel/big_shadow_2x.ac559.png",
   "images/channel/logo__xh_2x.png": "images/channel/logo__xh_2x.429d8.png",
   "images/channel/logo_xh.png": "images/channel/logo_xh.9c960.png",
+  "images/channel/small_shadow.png": "images/channel/small_shadow.e1a21.png",
+  "images/channel/small_shadow_2x.png": "images/channel/small_shadow_2x.9414b.png",
   "images/channel/xuanhuan.png": "images/channel/xuanhuan.26a72.png",
   "images/channel/xuanhuan_2x.png": "images/channel/xuanhuan_2x.27ebf.png",
   "images/common/big_wu.png": "images/common/big_wu.41a82.png",
   "images/common/big_wu_2x.png": "images/common/big_wu_2x.2e18c.png",
+  "images/common/blue_btn.png": "images/common/blue_btn.75000.png",
+  "images/common/blue_btn_2x.png": "images/common/blue_btn_2x.88c61.png",
   "images/common/tag.png": "images/common/tag.5f18a.png",
   "images/common/tag_2x.png": "images/common/tag_2x.5ff3b.png",
   "images/common/wu.png": "images/common/wu.fec42.png",
   "images/common/wu_2x.png": "images/common/wu_2x.fe072.png",
   "images/erciyuan/book_cover.png": "images/erciyuan/book_cover.b32c8.png",
+  "images/erciyuan/bsrt_icon.png": "images/erciyuan/bsrt_icon.3ba62.png",
+  "images/erciyuan/bsrt_title.png": "images/erciyuan/bsrt_title.78110.png",
+  "images/erciyuan/bsrt_title2x.png": "images/erciyuan/bsrt_title2x.45747.png",
   "images/erciyuan/dh1x.png": "images/erciyuan/dh1x.8ea14.png",
   "images/erciyuan/dh3x.png": "images/erciyuan/dh3x.2900d.png",
+  "images/erciyuan/gxtc_icon.png": "images/erciyuan/gxtc_icon.af43a.png",
+  "images/erciyuan/gxtc_title.png": "images/erciyuan/gxtc_title.0de0c.png",
+  "images/erciyuan/gxtc_title2x.png": "images/erciyuan/gxtc_title2x.fef18.png",
   "images/erciyuan/icon-qt.png": "images/erciyuan/icon-qt.3f463.png",
   "images/erciyuan/icon-qt3x.png": "images/erciyuan/icon-qt3x.26ae4.png",
   "images/erciyuan/icon-tr.png": "images/erciyuan/icon-tr.31fa2.png",
@@ -108,9 +137,20 @@
   "images/erciyuan/logo_search_bg.png": "images/erciyuan/logo_search_bg.6ce20.png",
   "images/erciyuan/mh1x.png": "images/erciyuan/mh1x.8f4e2.png",
   "images/erciyuan/mh3x.png": "images/erciyuan/mh3x.c4407.png",
+  "images/erciyuan/qcrc_icon.png": "images/erciyuan/qcrc_icon.e93fc.png",
+  "images/erciyuan/qcrc_title.png": "images/erciyuan/qcrc_title.dae7a.png",
+  "images/erciyuan/qcrc_title2x.png": "images/erciyuan/qcrc_title2x.3fa99.png",
   "images/erciyuan/qt_1.png": "images/erciyuan/qt_1.30f23.png",
+  "images/erciyuan/qxs_1.png": "images/erciyuan/qxs_1.e27ee.png",
+  "images/erciyuan/qxs_2.png": "images/erciyuan/qxs_2.70f64.png",
   "images/erciyuan/rank_1.png": "images/erciyuan/rank_1.00a3d.png",
+  "images/erciyuan/rank_2.png": "images/erciyuan/rank_2.1f4cf.png",
+  "images/erciyuan/rank_wb_1.png": "images/erciyuan/rank_wb_1.9e2bb.png",
   "images/erciyuan/renqi-title.png": "images/erciyuan/renqi-title.b1ea5.png",
+  "images/erciyuan/slide1.png": "images/erciyuan/slide1.d2cba.png",
+  "images/erciyuan/slide2.png": "images/erciyuan/slide2.2b584.png",
+  "images/erciyuan/slide3.png": "images/erciyuan/slide3.00bb6.png",
+  "images/erciyuan/slide4.png": "images/erciyuan/slide4.1125a.png",
   "images/erciyuan/title-dh.png": "images/erciyuan/title-dh.8afb4.png",
   "images/erciyuan/title-dh3x.png": "images/erciyuan/title-dh3x.ac54f.png",
   "images/erciyuan/title-mh.png": "images/erciyuan/title-mh.664e3.png",
@@ -118,6 +158,10 @@
   "images/erciyuan/title-yx.png": "images/erciyuan/title-yx.96961.png",
   "images/erciyuan/title-yx3x.png": "images/erciyuan/title-yx3x.86df9.png",
   "images/erciyuan/title_tags.png": "images/erciyuan/title_tags.03a09.png",
+  "images/erciyuan/tr-rank.png": "images/erciyuan/tr-rank.56eee.png",
+  "images/erciyuan/yshx_icon.png": "images/erciyuan/yshx_icon.8ffec.png",
+  "images/erciyuan/yshx_title.png": "images/erciyuan/yshx_title.98e36.png",
+  "images/erciyuan/yshx_title2x.png": "images/erciyuan/yshx_title2x.2009c.png",
   "images/erciyuan/yx1x.png": "images/erciyuan/yx1x.feb5c.png",
   "images/erciyuan/yx3x.png": "images/erciyuan/yx3x.17f71.png",
   "images/error/error.png": "images/error/error.15625.png",
@@ -142,51 +186,33 @@
   "images/rank/nodata.png": "images/rank/nodata.bc186.png",
   "images/rank/nodata_2x.png": "images/rank/nodata_2x.8bd3e.png",
   "images/rank/nodata_3x.png": "images/rank/nodata_3x.c86fc.png",
-  "js/all_finish_free/common.js": "js/all_finish_free/common.d2ed0.js",
-  "js/channel/index.js": "js/channel/index.bac3d.js",
-  "js/component/ajaxSetting.js": "js/component/ajaxSetting.a3785.js",
-  "js/component/browserSupport.js": "js/component/browserSupport.c649d.js",
-  "js/component/carousel.js": "js/component/carousel.f29bd.js",
-  "js/component/header.js": "js/component/header.b4b9a.js",
-  "js/component/jquery.lazyload.js": "js/component/jquery.lazyload.2e65d.js",
-  "js/component/pinNav.js": "js/component/pinNav.a7ecb.js",
-  "js/component/report.js": "js/component/report.638b5.js",
-  "js/component/roundabout.js": "js/component/roundabout.3e2a0.js",
-  "js/component/url.js": "js/component/url.7a7b5.js",
-  "js/error/index.js": "js/error/index.bc24d.js",
-  "js/free/addBook.js": "js/free/addBook.03a8c.js",
-  "js/free/limitedFree.js": "js/free/limitedFree.2e966.js",
-  "js/index/index.js": "js/index/index.ba61c.js",
-  "js/index/login.js": "js/index/login.45395.js",
-  "js/rank/community.js": "js/rank/community.36075.js",
-  "js/rank/hotnew.js": "js/rank/hotnew.b67d0.js",
-  "js/rank/index.js": "js/rank/index.005ed.js",
-  "js/search/index.js": "js/search/index.257a5.js",
-  "css/lbfUI/css/Autocomplete.css": "css/lbfUI/css/Autocomplete.af9f4.css",
-  "css/lbfUI/css/Button.css": "css/lbfUI/css/Button.b2fbc.css",
-  "css/lbfUI/css/Checkbox.css": "css/lbfUI/css/Checkbox.70e57.css",
-  "css/lbfUI/css/ComboBox.css": "css/lbfUI/css/ComboBox.eeffc.css",
-  "css/lbfUI/css/Dropdown.css": "css/lbfUI/css/Dropdown.bde31.css",
-  "css/lbfUI/css/Gotop.css": "css/lbfUI/css/Gotop.c5b25.css",
-  "css/lbfUI/css/LightTip.css": "css/lbfUI/css/LightTip.241d7.css",
-  "css/lbfUI/css/NumberSpinner.css": "css/lbfUI/css/NumberSpinner.3d000.css",
-  "css/lbfUI/css/Pagination.css": "css/lbfUI/css/Pagination.ebed0.css",
-  "css/lbfUI/css/Panel.css": "css/lbfUI/css/Panel.abb6d.css",
-  "css/lbfUI/css/Popup.css": "css/lbfUI/css/Popup.b6a29.css",
-  "css/lbfUI/css/Radio.css": "css/lbfUI/css/Radio.e7060.css",
-  "css/lbfUI/css/Slides.css": "css/lbfUI/css/Slides.6cd79.css",
-  "css/lbfUI/css/State.css": "css/lbfUI/css/State.1126a.css",
-  "css/lbfUI/css/TextInput.css": "css/lbfUI/css/TextInput.01ad6.css",
-  "css/lbfUI/css/Textarea.css": "css/lbfUI/css/Textarea.709ca.css",
-  "css/lbfUI/css/Tip.css": "css/lbfUI/css/Tip.58418.css",
-  "css/lbfUI/css/icon.css": "css/lbfUI/css/icon.85c95.css",
-  "css/lbfUI/css/zTreeStyle.css": "css/lbfUI/css/zTreeStyle.05ec3.css",
+  "css/lbfUI/css/Autocomplete.css": "css/lbfUI/css/Autocomplete.8f937.css",
+  "css/lbfUI/css/Button.css": "css/lbfUI/css/Button.843a0.css",
+  "css/lbfUI/css/Checkbox.css": "css/lbfUI/css/Checkbox.31f5f.css",
+  "css/lbfUI/css/ComboBox.css": "css/lbfUI/css/ComboBox.aa054.css",
+  "css/lbfUI/css/Dropdown.css": "css/lbfUI/css/Dropdown.08413.css",
+  "css/lbfUI/css/Gotop.css": "css/lbfUI/css/Gotop.ab20a.css",
+  "css/lbfUI/css/LightTip.css": "css/lbfUI/css/LightTip.a8a06.css",
+  "css/lbfUI/css/NumberSpinner.css": "css/lbfUI/css/NumberSpinner.a4154.css",
+  "css/lbfUI/css/Pagination.css": "css/lbfUI/css/Pagination.03a98.css",
+  "css/lbfUI/css/Panel.css": "css/lbfUI/css/Panel.84bc9.css",
+  "css/lbfUI/css/Popup.css": "css/lbfUI/css/Popup.0f099.css",
+  "css/lbfUI/css/Radio.css": "css/lbfUI/css/Radio.864df.css",
+  "css/lbfUI/css/Slides.css": "css/lbfUI/css/Slides.4e679.css",
+  "css/lbfUI/css/State.css": "css/lbfUI/css/State.d12ad.css",
+  "css/lbfUI/css/TextInput.css": "css/lbfUI/css/TextInput.1685d.css",
+  "css/lbfUI/css/Textarea.css": "css/lbfUI/css/Textarea.e7afa.css",
+  "css/lbfUI/css/Tip.css": "css/lbfUI/css/Tip.7b8c3.css",
+  "css/lbfUI/css/icon.css": "css/lbfUI/css/icon.ba610.css",
+  "css/lbfUI/css/zTreeStyle.css": "css/lbfUI/css/zTreeStyle.28a4e.css",
   "css/lbfUI/fonts/iconfont.eot": "css/lbfUI/fonts/iconfont.56c52.eot",
   "css/lbfUI/fonts/iconfont.svg": "css/lbfUI/fonts/iconfont.66a01.svg",
   "css/lbfUI/fonts/iconfont.ttf": "css/lbfUI/fonts/iconfont.d1053.ttf",
   "css/lbfUI/fonts/iconfont.woff": "css/lbfUI/fonts/iconfont.745c0.woff",
   "images/demo/sprite/@1x.png": "images/demo/sprite/@1x.c3f83.png",
   "images/demo/sprite/@2x.png": "images/demo/sprite/@2x.d348a.png",
+  "images/erciyuan/sprite/@1x.png": "images/erciyuan/sprite/@1x.3e60f.png",
+  "images/erciyuan/sprite/@2x.png": "images/erciyuan/sprite/@2x.a1e20.png",
   "images/index/1x/ds.png": "images/index/1x/ds.5eb0a.png",
   "images/index/1x/ecy.png": "images/index/1x/ecy.c7b95.png",
   "images/index/1x/jsls.png": "images/index/1x/jsls.3ff2c.png",
@@ -201,8 +227,6 @@
   "images/index/2x/wxxx.png": "images/index/2x/wxxx.b48e5.png",
   "images/index/2x/xhqh.png": "images/index/2x/xhqh.feaf7.png",
   "images/index/2x/yxjj.png": "images/index/2x/yxjj.832c4.png",
-  "images/erciyuan/sprite/@1x.png": "images/erciyuan/sprite/@1x.c6619.png",
-  "images/erciyuan/sprite/@2x.png": "images/erciyuan/sprite/@2x.33512.png",
   "css/lbfUI/images/Checkbox/checkbox-red.png": "css/lbfUI/images/Checkbox/checkbox-red.cabe6.png",
   "css/lbfUI/images/Checkbox/checkbox-red@2x.png": "css/lbfUI/images/Checkbox/checkbox-red@2x.10584.png",
   "css/lbfUI/images/Checkbox/checkbox.png": "css/lbfUI/images/Checkbox/checkbox.d8f91.png",
