--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "cross-env NODE_ENV=local  gulp dev",
     "init": "npm run build && npm run dev",
     "sprite": "gulp auto-sprite && sleep 1 && gulp auto-sprite",
-    "go": "gulp clean && gulp auto-sprite && gulp auto-sprite && gulp build  && gulp rev && gulp rev-fix && gulp rev-views && gulp copy",
+    "go": "gulp clean && gulp auto-sprite && gulp auto-sprite && gulp build  && gulp rev && gulp rev-fix && gulp rev-views",
     "clean": "gulp clean",
     "build": "gulp clean && sleep 1  && gulp auto-sprite && gulp auto-sprite && gulp build",
-    "nocombo-publish": "gulp clean && sleep 1 && gulp auto-sprite && gulp auto-sprite && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp copy && npm run preview",
-    "publish": "gulp clean && sleep 1 && gulp auto-sprite && gulp auto-sprite && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo && gulp copy ",
+    "nocombo-publish": "npm run build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views  && npm run preview",
+    "publish": "gulp clean && sleep 1 && gulp auto-sprite && gulp auto-sprite && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
     "preview": "cross-env NODE_ENV=preview  gulp dev"
   },
   "devDependencies": {
