--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.6",
+    "gulp-ejs": "^2.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-folders": "^1.1.0",
     "gulp-header": "^1.7.1",
@@ -48,6 +49,7 @@
     "gulp-slash": "^1.1.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.0.0",
     "imagemin-pngquant": "^4.0.0",
     "jshint": "^2.9.2",
