--- a/.yconfig
+++ b/.yconfig
@@ -5,9 +5,15 @@
 
 
 var ProjectConfig = {
-	"name":"demoProjectName",
-	"gtimgName":"yuewen", // 对应 qidian.gtimg.com/{name} 路径
-	"port":2324
+	"name": "demoProjectName",
+	"siteDomain":"www.yuewen.com",//若仅做单项目开发，可在这里配置项目上线的域名
+	"gtimgName": "yuewen", // 对应 qidian.gtimg.com/{name} 路径
+	"port": 2324,
+	"ftp": {
+		"host": '10.97.19.100',
+		"user": 'ftp',
+		"password": 'Lny4yJTWr3xHxllDoXLTzOm'
+	}
 };
 
 module.exports = ProjectConfig;
