增加不加版本号直接增加

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
         "preview": "cross-env NODE_ENV=preview  gulp dev",
         "init": "npm run build && npm run dev",
         "sprite": "gulp auto-sprite && sleep 1 && gulp auto-sprite",
-        "go": "gulp clean && gulp auto-sprite && gulp auto-sprite && gulp build  && gulp rev && gulp rev-fix && gulp rev-views",
+        "go": "gulp clean  && gulp build  && gulp rev && gulp rev-fix && gulp rev-views",
         "clean": "gulp clean",
-        "build": "gulp clean && sleep 1  && gulp auto-sprite && gulp auto-sprite && gulp build",
+        "build": "gulp clean && sleep 1  && gulp build",
         "nocombo-publish": "npm run build && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views",
-        "publish": "gulp clean && sleep 1 && gulp auto-sprite && gulp auto-sprite && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
+        "publish": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
+        "publish-skip": "gulp clean && sleep 1  && gulp build  && sleep 1 && gulp rev --skipV && gulp rev-fix && gulp rev-views && gulp preview-combo  && gulp copy-config",
         "static": "gulp static-html",
         "online-preview": "npm run nocombo-publish && gulp static-html --envConf build && gulp ftp-static && gulp ftp-views"
     },
