--- a/hash-tag-map/rev-manifest.json
+++ b/hash-tag-map/rev-manifest.json
@@ -1,6 +1,6 @@
 {
   "css/images_sprite.css": "css/images_sprite.4e27a.css",
-  "css/yuewen.css": "css/yuewen.f6d63.css",
+  "css/yuewen.css": "css/yuewen.a1a3f.css",
   "js/fastclick.js": "js/fastclick.d6d5b.js",
   "js/jquery.min.js": "js/jquery.min.2b869.js",
   "js/yuewen.js": "js/yuewen.a5fa1.js",
@@ -49,6 +49,7 @@
   "css/images/yw-logo@2x.png": "css/images/yw-logo@2x.37ac3.png",
   "css/images/yw-pattern.png": "css/images/yw-pattern.38eb5.png",
   "css/images/yw-qrcode.png": "css/images/yw-qrcode.2f5a8.png",
+  "css/images/brand/icons-brand.png": "css/images/brand/icons-brand.9155c.png",
   "css/images/ip/daomubiji.jpg": "css/images/ip/daomubiji.63308.jpg",
   "css/images/ip/dazhuzai.jpg": "css/images/ip/dazhuzai.d27c9.jpg",
   "css/images/ip/fengqiuhuang.jpg": "css/images/ip/fengqiuhuang.8e73f.jpg",
@@ -69,7 +70,6 @@
   "css/images/ip/xiaohua.jpg": "css/images/ip/xiaohua.370f9.jpg",
   "css/images/ip/zetianji.jpg": "css/images/ip/zetianji.131cc.jpg",
   "css/images/ip/zhiqingchun.jpg": "css/images/ip/zhiqingchun.e6cbe.jpg",
-  "css/images/brand/icons-brand.png": "css/images/brand/icons-brand.9155c.png",
   "css/images/png-origin/icon-book.png": "css/images/png-origin/icon-book.77fdc.png",
   "css/images/png-origin/icon-pen.png": "css/images/png-origin/icon-pen.e545f.png",
   "css/images/png-origin/icon-user.png": "css/images/png-origin/icon-user.953c5.png",
@@ -126,6 +126,24 @@
   "css/images/svg-store-o/user.svg": "css/images/svg-store-o/user.31b14.svg",
   "css/images/svg-store-o/weibo.svg": "css/images/svg-store-o/weibo.2e50a.svg",
   "css/images/svg-store-o/weixin.svg": "css/images/svg-store-o/weixin.8604f.svg",
+  "css/images/brand/origin/chuangshi.png": "css/images/brand/origin/chuangshi.cf9db.png",
+  "css/images/brand/origin/hongxiu.png": "css/images/brand/origin/hongxiu.8c513.png",
+  "css/images/brand/origin/huawen.png": "css/images/brand/origin/huawen.58125.png",
+  "css/images/brand/origin/jushihuawen.png": "css/images/brand/origin/jushihuawen.88455.png",
+  "css/images/brand/origin/lanren.png": "css/images/brand/origin/lanren.d2281.png",
+  "css/images/brand/origin/nvsheng.png": "css/images/brand/origin/nvsheng.51d7b.png",
+  "css/images/brand/origin/qidian.png": "css/images/brand/origin/qidian.f2828.png",
+  "css/images/brand/origin/qidiandushu.png": "css/images/brand/origin/qidiandushu.cca8a.png",
+  "css/images/brand/origin/qqyuedu.png": "css/images/brand/origin/qqyuedu.4f928.png",
+  "css/images/brand/origin/rongshuxia.png": "css/images/brand/origin/rongshuxia.d7209.png",
+  "css/images/brand/origin/tianfang.png": "css/images/brand/origin/tianfang.dd83b.png",
+  "css/images/brand/origin/xiaoqiang.png": "css/images/brand/origin/xiaoqiang.2d8bc.png",
+  "css/images/brand/origin/xiaoshuoyuedu.png": "css/images/brand/origin/xiaoshuoyuedu.97b53.png",
+  "css/images/brand/origin/yanqing.png": "css/images/brand/origin/yanqing.2f831.png",
+  "css/images/brand/origin/yuedu.png": "css/images/brand/origin/yuedu.d313b.png",
+  "css/images/brand/origin/yunqi.png": "css/images/brand/origin/yunqi.80c9a.png",
+  "css/images/brand/origin/zhongzhibowen.png": "css/images/brand/origin/zhongzhibowen.7607c.png",
+  "css/images/brand/origin/zuojiazhushou.png": "css/images/brand/origin/zuojiazhushou.509e1.png",
   "css/images/ip/2x/daomubiji.jpg": "css/images/ip/2x/daomubiji.3284b.jpg",
   "css/images/ip/2x/dazhuzai.jpg": "css/images/ip/2x/dazhuzai.d7641.jpg",
   "css/images/ip/2x/fengqiuhuang.jpg": "css/images/ip/2x/fengqiuhuang.ef23a.jpg",
@@ -146,24 +164,6 @@
   "css/images/ip/2x/xiaohua.jpg": "css/images/ip/2x/xiaohua.560b6.jpg",
   "css/images/ip/2x/zetianji.jpg": "css/images/ip/2x/zetianji.e8589.jpg",
   "css/images/ip/2x/zhiqingchun.jpg": "css/images/ip/2x/zhiqingchun.46a70.jpg",
-  "css/images/brand/origin/chuangshi.png": "css/images/brand/origin/chuangshi.cf9db.png",
-  "css/images/brand/origin/hongxiu.png": "css/images/brand/origin/hongxiu.8c513.png",
-  "css/images/brand/origin/huawen.png": "css/images/brand/origin/huawen.58125.png",
-  "css/images/brand/origin/jushihuawen.png": "css/images/brand/origin/jushihuawen.88455.png",
-  "css/images/brand/origin/lanren.png": "css/images/brand/origin/lanren.d2281.png",
-  "css/images/brand/origin/nvsheng.png": "css/images/brand/origin/nvsheng.51d7b.png",
-  "css/images/brand/origin/qidian.png": "css/images/brand/origin/qidian.f2828.png",
-  "css/images/brand/origin/qidiandushu.png": "css/images/brand/origin/qidiandushu.cca8a.png",
-  "css/images/brand/origin/qqyuedu.png": "css/images/brand/origin/qqyuedu.4f928.png",
-  "css/images/brand/origin/rongshuxia.png": "css/images/brand/origin/rongshuxia.d7209.png",
-  "css/images/brand/origin/tianfang.png": "css/images/brand/origin/tianfang.dd83b.png",
-  "css/images/brand/origin/xiaoqiang.png": "css/images/brand/origin/xiaoqiang.2d8bc.png",
-  "css/images/brand/origin/xiaoshuoyuedu.png": "css/images/brand/origin/xiaoshuoyuedu.97b53.png",
-  "css/images/brand/origin/yanqing.png": "css/images/brand/origin/yanqing.2f831.png",
-  "css/images/brand/origin/yuedu.png": "css/images/brand/origin/yuedu.d313b.png",
-  "css/images/brand/origin/yunqi.png": "css/images/brand/origin/yunqi.80c9a.png",
-  "css/images/brand/origin/zhongzhibowen.png": "css/images/brand/origin/zhongzhibowen.7607c.png",
-  "css/images/brand/origin/zuojiazhushou.png": "css/images/brand/origin/zuojiazhushou.509e1.png",
   "css/images/png-origin/2x/author-logo-white.png": "css/images/png-origin/2x/author-logo-white.6c902.png",
   "css/images/png-origin/2x/author-logo.png": "css/images/png-origin/2x/author-logo.658aa.png",
   "css/images/png-origin/2x/icon-weibo.png": "css/images/png-origin/2x/icon-weibo.8aaa2.png",
